src/assets/scss/main.scss
@import 'variables';
body,
html {
  height: 100%;
  font-family: 'Julius Sans One', sans-serif;
  color: $font-color;
  margin: 0;
  padding: 0;
  font-size: 16px;
}

a {
  text-decoration: none;
  color: $font-color;
}

.container {
  background-color: $bg-color;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

h1,
h2,
h3 {
  margin: 0 auto;
}

#main {
  width: 25%;
  margin-top: 1rem;
}

.sub-title {
  font-size: 1.5rem;
  margin-bottom: 4rem;
}

.intro-block {
  display: block;
  font-size: 2rem;
  -o-transition: .5s;
  -ms-transition: .5s;
  -moz-transition: .5s;
  -webkit-transition: .5s;
  /* ...and now for the proper property */
  transition: .5s;
  margin-top: 1.125rem;
  width: fit-content;
  padding: .25rem 1rem;
  &:not(:first-of-type) {
     ::after {
      content: '';
      width: 100%;
      position: absolute;
      display: block;
      height: 1px;
      top: -.5rem;
    }
  }
}

.intro-block:hover {
  background-color: $font-color;
  color: $bg-color;
}

h1 {
  font-family: 'Archigruntvo Black', sans-serif;
  color: $font-color;
  opacity: 0.9;
  font-weight: lighter;
}


/*SET FOR MEDIUM*/

@media (max-width: 40em) {
  h1 {
    font-size: 2.5em;
  }
  .intro-block {
    font-size: 1.5em;
  }
}


/*SET FOR S*/

@media (max-width: 25em) {
  h1 {
    font-size: 2.5em;
  }
  .intro-block {
    font-size: 1.5em;
  }
}


/*SET FOR L*/

@media (min-width: 40em) {
  h1 {
    font-size: 3em;
  }
  .intro-block {
    font-size: 2em;
  }
}


/*SET FOR XL*/

@media (min-width: 80em) {
  h1 {
    font-size: 3.5em;
  }
  .intro-block {
    font-size: 2.5em;
  }
}

